--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "commit": "git-cz",
     "release": "semantic-release",
     "storybook:build": "vue-cli-service storybook:build -c config/storybook",
+    "storybook:ci": "vue-cli-service storybook:build --ci -c config/storybook",
     "storybook:serve": "vue-cli-service storybook:serve -p 6006 -c config/storybook -s ./public"
   },
   "dependencies": {
