--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "changelog": "semantic-release --generate-notes",
     "commit": "git-cz",
     "release": "semantic-release",
-    "storybook:build": "vue-cli-service storybook:build -c config/storybook",
-    "storybook:ci": "vue-cli-service storybook:build --ci -c config/storybook",
+    "storybook:build": "vue-cli-service storybook:build -c config/storybook -s ./public",
+    "storybook:ci": "vue-cli-service storybook:build -c config/storybook -s ./public",
     "storybook:serve": "vue-cli-service storybook:serve -p 6006 -c config/storybook -s ./public"
   },
   "dependencies": {
