--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           node-version: 12
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Build Storybook
         run: npm run storybook:ci
       - name: Deploy to GH Pages
