ci: 🎡 add disco-styles

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "storybook:serve": "vue-cli-service storybook:serve -p 6006 -c config/storybook -s ./public"
   },
   "dependencies": {
+    "@brown-ccv/disco-styles": "^1.0.0",
     "bulma": "^0.8.2",
     "vue-bulma": "0.0.35",
     "vue-svg-loader": "^0.16.0"
