--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,14 +15,14 @@ jobs:
         with:
           node-version: 12
       - name: Install dependencies
-        run: npm ci
+        run: yarn ci
       - name: Build
-        run: npm run build
+        run: yarn build
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: npm run release
+        run: yarn release
 
   deploy:
     name: Deploy
@@ -34,9 +34,9 @@ jobs:
         with:
           node-version: 12
       - name: Install dependencies
-        run: npm install
+        run: yarn install
       - name: Build Storybook
-        run: npm run storybook:ci
+        run: yarn storybook:ci
       - name: Deploy to GH Pages
         if: success()
         uses: crazy-max/ghaction-github-pages@v1
