--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
           npm config set "//npm.pkg.github.com/:_authToken" ${{ secrets.GH_TOKEN }}
           yarn install
       - name: Build Storybook
-        run: yarn storybook:ci
+        run: yarn storybook:build
       - name: Deploy to GH Pages
         if: success()
         uses: crazy-max/ghaction-github-pages@v1
