--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "1.0.0-beta.31",
     "babel-eslint": "^10.1.0",
-    "chromedriver": "81",
+    "chromedriver": "^83.0.0",
     "cross-env": "^7.0.2",
     "cz-conventional-changelog": "^3.1.0",
     "eslint": "^6.7.2",
@@ -71,6 +71,7 @@
     "git-cz": "^4.3.1",
     "lint-staged": "^9.5.0",
     "minimist": "^1.2.5",
+    "nightwatch-accessibility": "^1.8.0",
     "prettier": "^1.19.1",
     "rollup": "^2.7.3",
     "rollup-plugin-babel": "^4.4.0",
