--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@rollup/plugin-replace": "^2.3.2",
     "@storybook/addon-actions": ">=5.3.0",
     "@storybook/addon-docs": ">=5.3.0",
-    "@storybook/addon-knobs": ">=5.3.0",
+    "@storybook/addon-knobs": "^5.3.19",
     "@storybook/addon-links": ">=5.3.0",
     "@storybook/addon-notes": ">=5.3.0",
     "@storybook/vue": ">=5.3.0",
