--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "@storybook/addon-knobs": "^5.3.19",
     "@storybook/addon-links": ">=5.3.0",
     "@storybook/addon-notes": ">=5.3.0",
+    "@storybook/addons": "^5.3.19",
+    "@storybook/theming": "^5.3.19",
     "@storybook/vue": ">=5.3.0",
     "@vue/cli-plugin-babel": "^4.3.1",
     "@vue/cli-plugin-e2e-nightwatch": "^4.3.0",
