--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   },
   "dependencies": {
     "@brown-ccv/disco-styles": "^2.0.0",
-    "bulma": "^0.8.2",
+    "bulma": "^0.9.0",
+    "bulma-helpers": "^0.3.12",
     "vue-bulma": "0.0.35",
     "vue-svg-loader": "^0.16.0"
   },
