--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@storybook/addons": "^5.3.19",
     "@storybook/theming": "^5.3.19",
     "@storybook/vue": ">=5.3.0",
+    "@testing-library/vue": "^5.0.4",
     "@vue/cli-plugin-babel": "^4.3.1",
     "@vue/cli-plugin-e2e-nightwatch": "^4.3.0",
     "@vue/cli-plugin-eslint": "^4.3.0",
