--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@storybook/theming": "^5.3.19",
     "@storybook/vue": ">=5.3.0",
     "@testing-library/jest-dom": "^5.11.0",
+    "@testing-library/nightwatch": "^2.0.0",
     "@testing-library/vue": "^5.0.4",
     "@vue/cli-plugin-babel": "^4.3.1",
     "@vue/cli-plugin-e2e-nightwatch": "^4.3.0",
