--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@brown-ccv/disco-styles": "^2.0.0",
+    "@testing-library/jest-dom": "^5.11.3",
     "bulma": "^0.8.2",
     "vue-bulma": "0.0.35",
     "vue-svg-loader": "^0.16.0"
@@ -53,6 +54,7 @@
     "@storybook/addons": "^5.3.19",
     "@storybook/theming": "^5.3.19",
     "@storybook/vue": ">=5.3.0",
+    "@testing-library/vue": "^5.0.4",
     "@vue/cli-plugin-babel": "^4.3.1",
     "@vue/cli-plugin-e2e-nightwatch": "^4.3.0",
     "@vue/cli-plugin-eslint": "^4.3.0",
