--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
     "@rollup/plugin-replace": "^2.3.3",
     "@storybook/addon-a11y": "^6.0.16",
     "@storybook/addon-actions": ">=6.0.16",
+    "@storybook/addon-controls": "^6.0.16",
     "@storybook/addon-docs": ">=6.0.16",
     "@storybook/addon-knobs": "^6.0.16",
     "@storybook/addon-links": ">=6.0.16",
     "@storybook/addon-notes": ">=5.3.19",
+    "@storybook/addon-viewport": "^6.0.16",
     "@storybook/addons": "^6.0.16",
     "@storybook/theming": "^6.0.16",
     "@storybook/vue": ">=6.0.16",
@@ -67,6 +69,7 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "1.0.4",
     "babel-eslint": "^10.1.0",
+    "babel-preset-vue": "^2.0.2",
     "chromedriver": "^84.0.1",
     "cross-env": "^7.0.2",
     "cz-conventional-changelog": "^3.1.0",
