--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "deploy": "firebase deploy"
   },
   "dependencies": {
-    "@brown-ccv/disco-styles": "^2.0.1",
+    "@brown-ccv/disco-styles": "git+https://github.com/brown-ccv/disco-styles.git#develop",
     "bulma": "^0.9.0",
     "bulma-helpers": "^0.3.12",
     "vue-bulma": "0.0.35",
