--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   },
   "dependencies": {
     "@brown-ccv/disco-styles": "git+https://github.com/brown-ccv/disco-styles.git#develop",
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
+    "@fortawesome/vue-fontawesome": "2",
     "bulma": "^0.9.0",
     "bulma-helpers": "^0.3.12",
     "vue-bulma": "0.0.35",
@@ -42,6 +44,8 @@
   "devDependencies": {
     "@babel/core": "^7.11.4",
     "@babel/preset-env": "^7.11.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-commonjs": "^15.0.0",
     "@rollup/plugin-replace": "^2.3.3",
