--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "deploy": "firebase deploy"
   },
   "dependencies": {
-    "@brown-ccv/disco-styles": "git+https://github.com/brown-ccv/disco-styles.git#develop",
+    "@brown-ccv/disco-styles": "2.1.0",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/vue-fontawesome": "2",
     "bulma": "^0.9.0",
