--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
     "@babel/preset-env": "^7.11.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
-    "@rollup/plugin-alias": "^3.1.1",
-    "@rollup/plugin-commonjs": "^15.0.0",
-    "@rollup/plugin-replace": "^2.3.3",
+    "@rollup/plugin-alias": "^2.2.0",
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-replace": "^2.3.2",
     "@storybook/addon-a11y": "^6.0.16",
     "@storybook/addon-actions": ">=6.0.16",
     "@storybook/addon-controls": "^6.0.16",
@@ -89,10 +89,10 @@
     "minimist": "^1.2.5",
     "nightwatch-accessibility": "^1.8.0",
     "prettier": "^2.0.5",
-    "rollup": "^2.26.4",
+    "rollup": "^2.7.3",
     "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "rollup-plugin-vue": "^6.0.0-beta.10",
+    "rollup-plugin-terser": "^5.3.0",
+    "rollup-plugin-vue": "^5.1.6",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.3",
     "semantic-release": "^17.1.1",
