--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
     "@fortawesome/vue-fontawesome": "2",
     "bulma": "^0.9.0",
     "bulma-helpers": "^0.3.12",
+    "lodash": "^4.17.20",
+    "vega": "^5.17.0",
+    "vega-embed": "^6.12.2",
+    "vega-lite": "^4.17.0",
     "vue-bulma": "0.0.35",
     "vue-svg-loader": "^0.16.0"
   },
