--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "firebase-tools": "^8.8.1",
     "geckodriver": "^1.20.0",
     "git-cz": "^4.7.0",
+    "jest-canvas-mock": "^2.3.0",
     "lint-staged": "^10.2.11",
     "minimist": "^1.2.5",
     "nightwatch-accessibility": "^1.8.0",
