--- a/package.json
+++ b/package.json
@@ -119,8 +119,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,vue}": [
-      "vue-cli-service lint",
-      "git add"
+      "vue-cli-service lint"
     ]
   },
   "peerDependencies": {
