--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "rollup": "^2.7.3",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-vue": "^6.0.0",
+    "rollup-plugin-vue2": "^0.8.1",
     "sass": "^1.26.10",
     "sass-loader": "^10.1.1",
     "semantic-release": "^17.1.1",
